<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E88989"
    tools:context=".ThirdActivity2">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="176dp"
        android:onClick="prevAct"
        android:text="@string/back2"
        android:textColor="#351818"
        android:textSize="20sp"
        app:backgroundTint="#6ED6DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="176dp"
        android:onClick="homeAct"
        android:text="@string/home2"
        android:textColor="#351818"
        android:textSize="20sp"
        app:backgroundTint="#6ED6DA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="266dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="228dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/sparkler"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/todo2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>